tests/paczka1/fuzzy1/50117373.err
Error in line 2: 0GCcj S381 67,7
Error in line 3: 0GCcj A790 23,9
Error in line 14: 95DvBV A640 9,7
Error in line 20: 9kJPAtKsOq A790 40,0
Error in line 21: 9kJPAtKsOq A640 98,2
Error in line 27: S381 S381 21,3
Error in line 15: caqSX A790 43,6
Error in line 31: 95DvBV A305 -1,6
Error in line 25: 95DvBV A305 13,2
Error in line 29: S381 A305 77,7
